--- a/content/resources/mit12_744f12_lec3.md
+++ b/content/resources/mit12_744f12_lec3.md
@@ -4,6 +4,8 @@ description: This resource contains information regarding radioactive decay.
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/ac4d1a19dbcd0ff9fdae65b79cecc67e_MIT12_744F12_Lec3.pdf
 file_size: 1100634
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
