--- a/content/resources/mit12_744f12_lec4.md
+++ b/content/resources/mit12_744f12_lec4.md
@@ -4,6 +4,8 @@ description: This resource contains information regarding radioactive decay seri
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/c9d4092797c06068611c0cfb0903a7d9_MIT12_744F12_Lec4.pdf
 file_size: 1379757
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
