--- a/content/resources/mit12_744f12_lec5.md
+++ b/content/resources/mit12_744f12_lec5.md
@@ -5,6 +5,8 @@ description: This resource contains information regarding radioactive decay - ex
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/2015639399ea69fc688f6b6b90ecf067_MIT12_744F12_Lec5.pdf
 file_size: 1089541
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
