--- a/content/resources/mit12_744f12_rd1910btmn.md
+++ b/content/resources/mit12_744f12_rd1910btmn.md
@@ -5,6 +5,8 @@ description: This resource contains information regarding solution of a system o
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/7997df0810fedf7a37d24671a40ec68a_MIT12_744F12_rd1910Btmn.pdf
 file_size: 213998
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
