--- a/content/resources/mit12_744f12_week11.md
+++ b/content/resources/mit12_744f12_week11.md
@@ -4,6 +4,8 @@ description: This resource contains information regarding week 11.
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/6c692c7ae552ae77601c485a795f53e9_MIT12_744F12_Week11.pdf
 file_size: 51341
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
