--- a/content/resources/mit12_744f12_week4.md
+++ b/content/resources/mit12_744f12_week4.md
@@ -4,6 +4,8 @@ description: This resource contains information regarding week 4.
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/a1eecd0fd572397d8552d010f92850f2_MIT12_744F12_Week4.pdf
 file_size: 52634
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
