--- a/content/resources/mit12_744f12_week6.md
+++ b/content/resources/mit12_744f12_week6.md
@@ -4,6 +4,8 @@ description: This resource contains information regarding week 6.
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/066cada33eee5c3b0409eff3ddbb069c_MIT12_744F12_Week6.pdf
 file_size: 51638
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
