--- a/content/resources/mit12_744f12_week7.md
+++ b/content/resources/mit12_744f12_week7.md
@@ -4,6 +4,8 @@ description: This resource contains information regarding week 7.
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/a9a5808ef50b6fbd5e33531ffdcca685_MIT12_744F12_Week7.pdf
 file_size: 57740
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
