--- a/content/resources/mit12_744f12_week8.md
+++ b/content/resources/mit12_744f12_week8.md
@@ -4,6 +4,8 @@ description: This resource contains information regarding week 8.
 file: /courses/12-744-marine-isotope-chemistry-fall-2012/524263ba81f9bb4df0ed448a309b25e3_MIT12_744F12_Week8.pdf
 file_size: 51093
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
