Sync all content

--- a/content/resources/12-744f12-th.md
+++ b/content/resources/12-744f12-th.md
@@ -12,9 +12,9 @@ image_metadata:
   caption: Isotopes provide insight into the nature and timing of processes that shape
     the ocean and atmosphere, the earth, and the solar system. (Ocean photograph courtesy
     of Repoort on Flickr. Earth photograph is from NASA and is in the public domain.
-    Nebula photograph is from NASA/ESA and is in the public domain. [Periodic table
-    of elements](http://en.wikipedia.org/wiki/File:Periodic_table.svg) figure was
-    created by Wikimedia user Cepheus and is in the public domain.)
+    Nebula photograph is from NASA/ESA and is in the public domain. {{% resource_link
+    "eea685ad-8082-45b9-a199-f62d74f851fb" "Periodic table of elements" %}} figure
+    was created by Wikimedia user Cepheus and is in the public domain.)
   credit: Ocean photograph courtesy of Repoort on Flickr. Earth photo is from NASA
     and is in the public domain. Nebula photo is from NASA/ESA and is in the public
     domain. Periodic table of elements figure was created by Wikimedia user Cepheus
